# canonical_network

./: .gitignore  compute_node_debug_setup_script.sh  debug_script_mila_images.sh  debug_script_mila_pointcloud.sh  pyproject.toml  run_script_images_optimization_method.sh  run_script_mila.sh  run_script_mila_pointcloud_modelnet.sh  run_script_mila_pointcloud_shapenet.sh  sweep_digits.yaml
canonical_network/: .gitignore  energy_poc.py  plots.py  train.py  train_colors.py  train_digits.py  train_images.py  train_modelnet.py  train_nbody.py  train_setrotmnist.py  train_shapenet.py  utils.py
canonical_network/models/: base_models.py  colouring_base_models.py  colouring_layers.py  euclideangraph_base_models.py  euclideangraph_model.py  gcl.py  gvp.py  image_model.py  image_networks.py  optimal_transport.py  pointcloud_base_models.py  pointcloud_classification_models.py  pointcloud_model.py  pointcloud_models.py  pointcloud_networks.py  pointcloud_partseg_models.py  set_base_models.py  set_model.py  test.py  vn_layers.py
canonical_network/prepare/: __init__.py  cifar_data.py  colors_data.py  digits_data.py  modelnet_data.py  nbody_data.py  rotated_mnist_data.py  shapenet_data.py  test.py
