[tool.poetry]
authors = ["Oumar Kaba <sekou.oumar.kaba@gmail.com>"]
description = ""
name = "canonical_network"
version = "0.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.14.2"
rope = "^1.1.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
