[tool.poetry]
authors = ["Oumar Kaba <sekou.oumar.kaba@gmail.com>"]
description = ""
name = "canonical_network"
version = "0.1.0"

[tool.poetry.dependencies]
einops = "^0.4.1"
python = "^3.9"
torch = "2.1.2"
numpy = "^1.22.4"
pytorch-lightning = "^1.6.4"
torchmetrics = "^0.9.1"
wandb = "^0.12.18"
scipy = "^1.9.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.14.2"
rope = "^1.1.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
